; ModuleID = '/home/carl/AnghaBench/linux/kernel/bpf/extr_verifier.c_insn_no_def.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/bpf/extr_verifier.c_insn_no_def.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bpf_insn = type { i32 }

@BPF_JMP = common dso_local global i64 0, align 8
@BPF_JMP32 = common dso_local global i64 0, align 8
@BPF_STX = common dso_local global i64 0, align 8
@BPF_ST = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bpf_insn*)* @insn_no_def to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @insn_no_def(%struct.bpf_insn* %0) #0 {
  %2 = alloca %struct.bpf_insn*, align 8
  %3 = alloca i64, align 8
  store %struct.bpf_insn* %0, %struct.bpf_insn** %2, align 8
  %4 = load %struct.bpf_insn*, %struct.bpf_insn** %2, align 8
  %5 = getelementptr inbounds %struct.bpf_insn, %struct.bpf_insn* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i64 @BPF_CLASS(i32 %6)
  store i64 %7, i64* %3, align 8
  %8 = load i64, i64* %3, align 8
  %9 = load i64, i64* @BPF_JMP, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %23, label %11

11:                                               ; preds = %1
  %12 = load i64, i64* %3, align 8
  %13 = load i64, i64* @BPF_JMP32, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %23, label %15

15:                                               ; preds = %11
  %16 = load i64, i64* %3, align 8
  %17 = load i64, i64* @BPF_STX, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %23, label %19

19:                                               ; preds = %15
  %20 = load i64, i64* %3, align 8
  %21 = load i64, i64* @BPF_ST, align 8
  %22 = icmp eq i64 %20, %21
  br label %23

23:                                               ; preds = %19, %15, %11, %1
  %24 = phi i1 [ true, %15 ], [ true, %11 ], [ true, %1 ], [ %22, %19 ]
  %25 = zext i1 %24 to i32
  ret i32 %25
}

declare dso_local i64 @BPF_CLASS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
